# gtkmm-template

./: README.md  meson.build
assets/: resources.gresource.xml
src/: window.cpp
